@@ -29,7 +29,7 @@ PCorpus <- function(x,
     while (!eoi(x)) {
         x <- stepNext(x)
         elem <- getElem(x)
-        doc <- readerControl$reader(elem, readerControl$language, as.character(counter))
+        doc <- readerControl$reader(elem, readerControl$language, if (is.null(x$Names)) as.character(counter) else x$Names[counter])
         filehash::dbInsert(db, ID(doc), doc)
         if (x$Length > 0) tdl[[counter]] <- ID(doc)
         else tdl <- c(tdl, ID(doc))
@@ -72,14 +72,14 @@ VCorpus <- Corpus <- function(x,
     if (x$Vectorized)
         tdl <- mapply(function(x, id) readerControl$reader(x, readerControl$language, id),
                       pGetElem(x),
-                      id = as.character(seq_len(x$Length)),
+                      id = if (is.null(x$Names)) as.character(seq_len(x$Length)) else x$Names,
                       SIMPLIFY = FALSE)
     else {
         counter <- 1
         while (!eoi(x)) {
             x <- stepNext(x)
             elem <- getElem(x)
-            doc <- readerControl$reader(elem, readerControl$language, as.character(counter))
+            doc <- readerControl$reader(elem, readerControl$language, if (is.null(x$Names)) as.character(counter) else x$Names[counter])
             if (x$Length > 0)
                 tdl[[counter]] <- doc
             else
